src/templates/styles.css
fieldset                  { border: 1px solid black; background-color: #70b1e254; padding: .5em; }
label                     { display: flex; margin: .25em; align-items: center; }
label.checkbox            { justify-content: space-between; }
label.checkbox div        { min-width: 200px; }
input, select, #output    { margin-left: .25em; flex-grow: 1; }
input, select             { padding: 4px; line-height: 1.25em; color: #555; border: 1px solid #CCC; border-radius: 3px; background-color: white; }
input                     { height: 18px; }
input:focus, select:focus { border-color: #72B5E8; box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(82, 168, 236, 0.6); outline: 0px none; }
input.hide                { background-color: black; color: black;}
#usefulUrl                { font-size: 11px; min-height: 14px; }
.error                    { border: 2px solid #F22; color: #F22; font-weight: bold; }
.icons                    { margin: 0 0 0 5px; display: flex; justify-content: space-between; }
.hidden                   { display: none; }
input[type="checkbox"]    { vertical-align:middle; margin-left: auto;}
#output                   { font-family: monospace; border: 1px dashed black; padding: .5em .1em 0 .1em; text-align: center; background: white; color: black; font-weight: bold; font-size: 1.2em; min-height: 20px; }
#output.hide              { background-color: black; }
#output.error.hide        { background-color: none; }
a.options                 { color: #5b93be; }
i#copyToClipboardBtn      { color: #5b93be; font-size: 26px; margin: 0 0 0 5px;}

